# sonicos_integration

./: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: AddToList.vue  Login.vue  Portal.vue  RemoveFromList.vue
frontend/views/: index.html  remove_from_list.html
src/: main.py  sonicOS.py  validations.py
src/db/: main.py
src/routes/: appRoutes.py
static/: styles.css
views/: add_to_list.html  addcompany.html  addfirewall.html  adduser.html  admin.html  cfsoptions.html  createuser.html  index.html  portal.html  remove_from_list.html  show_uri_list.html
