[tool.poetry]
name = "sonicOS-API-Integration"
version = "0.1.0"
description = ""
authors = ["João Lima <oi.oaoj@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
fastapi = "^0.68.0"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
uvicorn = "^0.14.0"
requests = "^2.26.0"
python-multipart = "^0.0.5"
tldextract = "^3.1.2"
sonicos-api = "^0.1.2"
pymongo = "^3.12.0"
dnspython = "^2.1.0"
argon2-cffi = "^21.1.0"
fastapi-sessions = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
